--- a/index.html
+++ b/index.html
@@ -107,9 +107,16 @@
 		 * @extends Object
 		 * @constructor
 		 * */
-		Countdown = function Count(O, callback){
+
+ 		Countdown = function Count(O, callback){
 
 			if(!O || Object.keys(O).length == 0) return;
+
+			try{
+				new Date(O.endTime);
+			}catch(e){
+				return false;
+			}
 
 			var self = arguments.callee,
 				fn = self.prototype,
@@ -315,7 +322,7 @@
 			 * */
 			fn.init || (fn.init = function (){
 
-				if(Object.keys(O).length == 0 || !this.timeValide(O.endTime)) return;
+				if(Object.keys(O).length == 0 /*|| !this.timeValide(O.endTime)*/) return;
 
 				var property = {
 					$frame: doc.createDocumentFragment(),
@@ -345,21 +352,29 @@
 </script>
 
 <script>
-	new Countdown({
-		endTime: '2014-5-17 15:12:00',  //必选 结束时间
-		bgColor: 'pink',                //可选 背景圆环色
-		c1: '#999',                     //可选 天 圆环色
-		c2: 'yellow',                   //可选 小时 间圆环色
-		c3: 'red',                      //可选 分 圆环色
-		c4: 'black',                    //可选 秒 圆环色
-		color: 'deeppink',              //可选 4个计时圆环色，设置才c1,c1...会被覆盖
-		parent: 'body',                 //可选 倒计时插入目标节点, 没有设置，请手动插入实例$frame至目标节点 如: document.body.appendChild(instance.$frame)
-		diameter: 100,                  //可选 直径 默认200
-		radius: 10,                     //可选 直径 默认20
-		lang:'en'                       //可选 语言 默认chs
-	},function (){                      //可选 回调 倒计时结束时调用
 
-	});
+	!function (){
+
+		var t = new Date;
+			t.setMonth(t.getMonth()+2);
+
+		new Countdown({
+			endTime: t.getFullYear()+'-'+ t.getMonth() +'-'+ t.getDate(),  //必选 结束时间 如 '2014-5-17 15:12:00'(必须是能被Date实例化的数字或、日期和字符串),
+			bgColor: 'pink',                //可选 背景圆环色
+			c1: '#999',                     //可选 天 圆环色
+			c2: 'yellow',                   //可选 小时 间圆环色
+			c3: 'red',                      //可选 分 圆环色
+			c4: 'black',                    //可选 秒 圆环色
+			color: 'deeppink',              //可选 4个计时圆环色，设置才c1,c1...会被覆盖
+			parent: 'body',                 //可选 倒计时插入目标节点, 没有设置，请手动插入实例$frame至目标节点 如: document.body.appendChild(instance.$frame)
+			diameter: 100,                  //可选 直径 默认200
+			radius: 10,                     //可选 直径 默认20
+			lang:'en'                       //可选 语言 默认chs
+		},function (){                      //可选 回调 倒计时结束时调用
+
+		});
+	}()
+
 </script>
 </body>
 </html>
