--- a/index.html
+++ b/index.html
@@ -228,9 +228,7 @@
 
 				for(;j++<4;){
 
-					t = null;
-					c1 = null;
-					c2 = null;
+					t = c1 = c2 = null;
 
 					t = div.cloneNode(false);
 					t.className = 'circular c' + j;
